--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "mongodb": "^6.12.0",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1"
   }
