--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "mongodb": "^6.12.0",
-    "nodemon": "^3.1.7",
+    "mongoose": "^8.9.2",
     "socket.io": "^4.8.1"
+  },
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
